# fuseflow-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
lib/Conversion/: CMakeLists.txt
lib/Conversion/SparseToSam/: CMakeLists.txt  ConstructEinsum.cpp  ConstructEinsum.h  ConvertFillOps.cpp  FusedCIN.cpp  FusedCIN.h  FusionGroupRewrite.cpp  InsertIterateLocate.cpp  LinalgToSam.cpp  LinalgToSam.h  Passes.h  Passes.td  RemoveJoinerDuplicateStreams.cpp  Table.h  TopoSort.h  Vars.cpp  Vars.h  tabulate.h
lib/Dialect/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
tests/: buggy_two_matmuls.mlir  gnn_unfused.mlir  lit.cfg.py  sam_fused.mlir  sum_matmuls.mlir  test.mlir
tests/kernels/: concat.mlir  matmul_sweep.mlir  nested_matmuls.mlir
tests/misc/: identity.mlir  sparse_QK.mlir  sparse_QKV.mlir  sparse_QK_exp.mlir  sparse_QK_fuse.mlir  sparse_add.mlir  sparse_assign.mlir  sparse_fusion.mlir  sparse_identity.mlir  sparse_linear.mlir  sparse_new.mlir  sparse_sddmm.mlir  sparse_softmax_tmp.mlir  sparse_spmm_ijk.mlir  sparse_spmm_ikj.mlir  sparse_spmm_multi.mlir  sparse_spmv.mlir  sparse_tensor_vectorize.mlir  sparse_vecmul.mlir
tests/models/: attention_torch.mlir  autoencoder.mlir  autoencoder_batched_decoder_fused.mlir  autoencoder_batched_encoder_fused.mlir  autoencoder_batched_unfused_1_enc_spmm.mlir  autoencoder_batched_unfused_2_enc_bias.mlir  autoencoder_batched_unfused_3_enc_relu.mlir  autoencoder_batched_unfused_4_dec_spmm.mlir  autoencoder_batched_unfused_5_dec_bias.mlir  autoencoder_imagenet.mlir  autoencoder_imagenet_batched.mlir  autoencoder_luna16.mlir  autoencoder_luna16_batched.mlir  autoencoder_luna16_decoder_fused.mlir  autoencoder_luna16_encoder_fused.mlir  autoencoder_luna16_unfused_1_enc_spmm.mlir  autoencoder_luna16_unfused_2_enc_bias.mlir  autoencoder_luna16_unfused_3_enc_relu.mlir  autoencoder_luna16_unfused_4_dec_spmm.mlir  autoencoder_luna16_unfused_5_dec_bias.mlir  autoencoder_nih_batched.mlir  autoencoder_nih_cxr.mlir  autoencoder_nih_decoder_fused.mlir  autoencoder_nih_encoder_fused.mlir  autoencoder_nih_unfused_1_enc_spmm.mlir  (+23 more)
tools/: CMakeLists.txt  CMakeLists.txt.backup  sam-opt.cpp  sam-translate.cpp
(+94 files in other folders)
